# green-challenge

./: ProjectHome.md  README.md
GreenFox/: build.sh  configure.ac  dist.sh
GreenFox-old/: dist_win.sh  system-monitor-0.3.x86.xpi
GreenFox-old/components/: Makefile.am  clIGreenFox.idl
GreenFox-old/test/: cpu.test.js  greenfox-test.js
GreenFox/components/: clGreenFox.h  clICPU.h  clIGreenFox.h  clIGreenFox.idl  clISystem.h  clSystemModule.cpp
GreenFox/components/SystemMonitor/: SystemMonitor.vcproj
GreenFox/srcExtension/: LICENSE.txt  install.rdf
GreenFox/srcExtension/components/: clGreenFox.h  clIGreenFox.xpt
GreenFox/test/: greenfox.html  greenfox2.html
Image2Rle/: pom.xml
QRDecoder/: .project
QRDecoder/war/: index.html
QRDecoder/war/WEB-INF/: appengine-web.xml  web.xml
QRdecode/QRDecoder/: .classpath  apple.qrc
ScoreChallenge/score-challenge/: score-challenge.ipr  score-challenge.iws
ScoreChallenge/score-challenge/web/: index.jsp  submit.jsp
trunk/GreenFox/: build.sh  configure.ac  dist_win.sh  install.rdf.in
trunk/GreenFox-old/: autogen.sh
trunk/GreenFox-old/components/: clCPU.h  clICPUTime.h
trunk/GreenFox/components/: Makefile.am  clCPU.cpp  clGreenFox.cpp  clGreenFox.h  clICPUTime.h  clIGreenFox.h  clISystem.h
trunk/GreenFox/components/SystemMonitor/: SystemMonitor.vcproj
trunk/GreenFox/releases/: greenfox-latest.xpi
trunk/GreenFox/srcExtension/: install.rdf
trunk/GreenFox/test/: greenfoxFromPage.html  nonGreenJavaScript.html
trunk/QRDecoder/war/: index.html
trunk/ScoreChallenge/score-challenge/: score-challenge.ipr  (+1 more)
(+348 files in other folders)
